--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Create</title>
+  </head>
+  <body>
+    <h1>Create a Team and Heroes!</h1>
 
+    <form action="/teams" method="post">
+      <p><label for="string">Team Name:</label>
+        <input type="text" name="team[name]"></p>
+    <p> <label for="string">Team Motto:</label>
+        <input type="text" name="team[motto]"></p>
+
+
+    <h2>Hero 1</h2>
+    <p> <label for="string">Hero's Name:</label>
+        <input id= "member1_name"  type="text" name="team[members][][name]"><p>
+    <p>  <label for="string">Hero's Power</label>
+        <input id= "member1_power" type="text" name="team[members][][power]"><p>
+    <p>  <label for="string">Hero's Biography</label>
+        <input id= "member1_bio" type="text" name="team[members][][biography]"><p>
+
+      <h2>Hero 2</h2>
+      <p> <label for="string">Hero's Name:</label>
+        <input id= "member2_name"  type="text" name="team[members][][name]"><p>
+      <p>  <label for="string">Hero's Power</label>
+      <input id= "member2_power" type="text" name="team[members][][power]"><p>
+    <p><label for="string">Hero's Biography</label>
+      <input id= "member2_bio" type="text" name="team[members][][biography]"> <p>
+
+
+    <h2>Hero 3</h2>
+    <p> <label for="string">Hero's Name:</label>
+    <input id= "member3_name"  type="text" name="team[members][][name]"><p>
+  <p>  <label for="string">Hero's Power</label>
+    <input id= "member3_power" type="text" name="team[members][][power]"><p>
+  <p>  <label for="string">Hero's Biography</label>
+    <input id= "member3_bio" type="text" name="team[members][][biography]"><p>
+
+      <input type="submit" value="submit">
+    </form>
+
+
+
+  </body>
+</html>
